--- a/homepage.html
+++ b/homepage.html
@@ -38,9 +38,9 @@
 
 	<div class="row body">
 		<div class="col-md-3"></div>
-		<a href="login_teacher.html"><button type="button" class="btn btn1 btn-lg col-md-1">Faculty</button></a>
+		<a href="login_teacher.html"><button type="button" class="btn btn1 btn-lg col-md-1">Faculty Login</button></a>
 		<div class="col-md-2"></div>
-		<a href="login_admin.html"><button type="button" class="btn btn2 btn-lg col-md-1">Admin</button></a>
+		<a href="login_admin.html"><button type="button" class="btn btn2 btn-lg col-md-1">Admin Login</button></a>
 	</div>
 
 	<div class="footer row">
